--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         return (
           <nav className="navbar">
             <div className="container">
-              <div className="logo">Lục Bình</div>
+              <div className="logo">Water Hyacinth Bag</div>
               <button
                 className="menu-toggle"
                 onClick={() => setMenuOpen(!menuOpen)}
@@ -368,7 +368,7 @@
       const Footer = () => (
         <footer className="footer">
           <div className="container">
-            <p>&copy; {new Date().getFullYear()} Lục Bình. All rights reserved.</p>
+            <p>&copy; {new Date().getFullYear()} Water Hyacinth Bag. All rights reserved.</p>
             <div className="social-links">
               <a href="#"><i className="fab fa-facebook-f"></i></a>
               <a href="#"><i className="fab fa-instagram"></i></a>
