feat: Add initial Vietnamese and English landing pages for the water hyacinth bag collection.

--- a/en/index.html
+++ b/en/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>LuxeCarry - Water Hyacinth Bag Collection</title>
+  <title>MLT Team - Water Hyacinth Bag Collection</title>
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -32,14 +32,14 @@
         <div class="brand">
           <img src="../assets/logo/image.png" class="brand-icon">
           <span class="brand-text">MLT Team</span>
+          <a href="../vi/index.html"
+            style="background: rgba(182, 218, 154, 0.1); padding: 0.5rem 1rem; border-radius: 20px;"><i
+              class="fas fa-globe"></i> VI</a>
         </div>
         <button class="menu-toggle" id="menuToggle">
           <i class="fas fa-bars" id="menuIcon"></i>
         </button>
         <ul class="nav-menu" id="navMenu">
-          <li><a href="../vi/index.html"
-              style="background: rgba(182, 218, 154, 0.1); padding: 0.5rem 1rem; border-radius: 20px;"><i
-                class="fas fa-globe"></i> VI</a></li>
           <li><a href="#home">Home</a></li>
           <li><a href="#features">Shop Collection</a></li>
           <li><a href="#about">Our Story</a></li>
