--- a/vi/index.html
+++ b/vi/index.html
@@ -32,14 +32,14 @@
         <div class="brand">
           <img src="../assets/logo/image.png" class="brand-icon">
           <span class="brand-text">MLT Team</span>
+          <a href="../en/index.html"
+            style="background: rgba(182, 218, 154, 0.1); padding: 0.5rem 1rem; border-radius: 20px;"><i
+              class="fas fa-globe"></i> EN</a>
         </div>
         <button class="menu-toggle" id="menuToggle">
           <i class="fas fa-bars" id="menuIcon"></i>
         </button>
         <ul class="nav-menu" id="navMenu">
-          <li><a href="../en/index.html"
-              style="background: rgba(182, 218, 154, 0.1); padding: 0.5rem 1rem; border-radius: 20px;"><i
-                class="fas fa-globe"></i> EN</a></li>
           <li><a href="#home">Trang chủ</a></li>
           <li><a href="#features">Bộ sưu tập</a></li>
           <li><a href="#about">Về chúng tôi</a></li>
