--- a/en/vhsf.html
+++ b/en/vhsf.html
@@ -25,15 +25,15 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">VHSF</a>
+            <a class="nav-link" href="../vi/vhsf.html"
+                style="background: rgba(182, 218, 154, 0.1); padding: 0.5rem 1rem; border-radius: 20px;"><i
+                    class="fas fa-globe"></i> VI</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="../vi/vhsf.html"
-                            style="background: rgba(182, 218, 154, 0.1); padding: 0.5rem 1rem; border-radius: 20px;"><i
-                                class="fas fa-globe"></i> VI</a></li>
                     <li class="nav-item">
                         <a class="nav-link active" href="#about">About VHSF</a>
                     </li>
