--- a/vi/vhsf.html
+++ b/vi/vhsf.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>VHSF – Quỹ Hỗ Trợ Làng Nghề Thủ Công Việt Nam</title>
+    <title>VHSF - Quỹ Hỗ Trợ Làng Nghề Thủ Công Việt Nam</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap 5 -->
@@ -25,15 +25,16 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">VHSF</a>
+            <a class="nav-link" href="../en/vhsf.html"
+                style="background: rgba(182, 218, 154, 0.1); padding: 0.5rem 1rem; border-radius: 20px;"><i
+                    class="fas fa-globe"></i> EN</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="../en/vhsf.html"
-                            style="background: rgba(182, 218, 154, 0.1); padding: 0.5rem 1rem; border-radius: 20px;"><i
-                                class="fas fa-globe"></i> EN</a></li>
+                    <li class="nav-item"></li>
                     <li class="nav-item">
                         <a class="nav-link active" href="#about">Về VHSF</a>
                     </li>
